fix: Complete English word wrap

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,7 +1,7 @@
 @import './assets/style/reset.scss';
 
 *{
-  word-break: break-all;
+  word-break: break-word;
   word-wrap: break-word;
 }
 input {
